# cpp-course-homeworks

./: .gitignore
asm-hex-to-dec/: CMakeLists.txt  hex_to_dec.asm  main.c
big_int_vs/: big_int_vs.sln  big_int_vs.vcxproj  big_int_vs.vcxproj.filters  optimized_vector.cpp  optimized_vector.h  stdafx.cpp
big_integer/: CMakeLists.txt  big_integer.cpp  big_integer.h  big_integer_testing.cpp  optimized_vector.cpp  optimized_vector.h  tmp.cpp
big_integer/gtest/: gtest-all.cc  gtest.h  gtest_main.cc
helloasm/: CMakeLists.txt  add.asm  mul  mul.asm  sub  sub.asm
huffman/: Ready Player One.txt  decode.txt  encode.txt  huffman.sln  huffman_interface.cpp  huffman_interface.h  huffman_testing.cpp  huffman_utilit.cpp  tmp  utilit.cpp
huffman/gtest/: gtest-all.cc  gtest.h  gtest_main.cc
huffman/huff_lib/: decoder.cpp  decoder.h  encoder.cpp  encoder.h  huffman_lib.cpp  huffman_lib.h
huffman/huffman/: encoder.h  huffman_tree.cpp  huffman_tree.h  my_stream.cpp  my_stream.h  packer.cpp  packer.h  utilit.cpp
set_restore_guard/: main.cpp  set_restore_guard.h
